[gd_scene load_steps=30 format=2]

[ext_resource path="res://levels/Tutorial.gd" type="Script" id=1]
[ext_resource path="res://Objects/Spawners/RandomTimer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Spawners/CheeseSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/Level.gd" type="Script" id=4]
[ext_resource path="res://Objects/Spawners/Spawner2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/FlyingBodies/Star/Star.tscn" type="PackedScene" id=6]
[ext_resource path="res://levels/Tutorial/hand.svg" type="Texture" id=7]
[ext_resource path="res://Objects/Blackhole/Blackhole.tscn" type="PackedScene" id=8]
[ext_resource path="res://levels/Background.tscn" type="PackedScene" id=9]
[ext_resource path="res://Actors/starmouse/StarMouse.tscn" type="PackedScene" id=10]
[ext_resource path="res://Objects/Supernova/Supernova.tscn" type="PackedScene" id=11]
[ext_resource path="res://Objects/FlyingBodies/Comet/Comet.tscn" type="PackedScene" id=12]
[ext_resource path="res://Objects/Planets/planets.svg" type="Texture" id=13]
[ext_resource path="res://Objects/Moon/Moon.tscn" type="PackedScene" id=14]
[ext_resource path="res://Actors/astromouse/Astromouse.tscn" type="PackedScene" id=15]
[ext_resource path="res://meta/achievements/TutorialAchievement.tscn" type="PackedScene" id=16]
[ext_resource path="res://levels/ShakingCamera2D.tscn" type="PackedScene" id=17]










[sub_resource type="CircleShape2D" id=1]
radius = 192.0

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1280, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 128 ), Vector2( 0, 640 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 128 ), Vector2( 0, 640 ) ]
}

[sub_resource type="Animation" id=5]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 128 ), Vector2( 0, 640 ) ]
}

[sub_resource type="Animation" id=6]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 128 ), Vector2( 0, 640 ) ]
}

[sub_resource type="SegmentShape2D" id=7]
b = Vector2( 0, 720 )

[sub_resource type="Animation" id=8]
resource_name = "Comet"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("GodHandLeft/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 0.5, 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0, 15.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Finished"
length = 0.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../LeftStarSpawnPoint/Spawner/RandomTimer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../LeftCometSpawnPoint/Spawner/RandomTimer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("../RightStarSpawnPoint/Spawner/RandomTimer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("../RighCometSpawnPoint/Spawner/RandomTimer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "Overlay"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BlackBarTop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -64 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BlackBarDown:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 720 ), Vector2( 0, 656 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Overlay:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.498039 ) ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("BlackBarTop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BlackBarDown:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 720 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Overlay:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../RighCometSpawnPoint/Spawner/RandomTimer:autostart")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../RightStarSpawnPoint/Spawner/RandomTimer:autostart")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../LeftCometSpawnPoint/Spawner/RandomTimer:autostart")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../LeftStarSpawnPoint/Spawner/RandomTimer:autostart")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=12]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("GodHandRight/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 0.5, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0, -15.0 ]
}

[node name="Level" type="Node2D" groups=[
"level",
]]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 264.0 ],
"_edit_vertical_guides_": [  ]
}
next_level_path = "res://levels/Cinematics/CometCinematic.tscn"

[node name="Background" parent="." instance=ExtResource( 9 )]

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( 96, 56 )
rotation = -0.238229
texture = ExtResource( 13 )
region_enabled = true
region_rect = Rect2( 16, 22, 256, 256 )

[node name="Sprite2" type="Sprite" parent="Background"]
position = Vector2( 1184, 632 )
rotation = 0.232593
scale = Vector2( 0.804539, 0.804539 )
texture = ExtResource( 13 )
region_enabled = true
region_rect = Rect2( 756, 25, 256, 256 )

[node name="JumpArea2D" type="Area2D" parent="."]
position = Vector2( 648, 488 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpArea2D"]
shape = SubResource( 1 )

[node name="Moon" parent="." instance=ExtResource( 14 )]
position = Vector2( 648, 488 )

[node name="BlackholeSpawner" parent="." instance=ExtResource( 5 )]
position = Vector2( 1280, 0 )
spawn_scene = ExtResource( 8 )

[node name="RandomTimer" parent="BlackholeSpawner" instance=ExtResource( 2 )]
one_shot = true
autostart = true
min_wait_time = 20.0
max_wait_time = 40.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="BlackholeSpawner"]
autoplay = "idle"
anims/idle = SubResource( 2 )

[node name="LeftStarSpawnPoint" type="Node2D" parent="."]
position = Vector2( -256, -8 )

[node name="Spawner" parent="LeftStarSpawnPoint" instance=ExtResource( 5 )]
position = Vector2( 0, 128 )
spawn_scene = ExtResource( 6 )

[node name="RandomTimer" parent="LeftStarSpawnPoint/Spawner" instance=ExtResource( 2 )]
min_wait_time = 2.0
max_wait_time = 16.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="LeftStarSpawnPoint/Spawner"]
autoplay = "idle"
anims/idle = SubResource( 3 )

[node name="LeftCometSpawnPoint" type="Node2D" parent="."]
position = Vector2( -256, -8 )

[node name="Spawner" parent="LeftCometSpawnPoint" instance=ExtResource( 5 )]
position = Vector2( 0, 128 )
spawn_scene = ExtResource( 12 )

[node name="RandomTimer" parent="LeftCometSpawnPoint/Spawner" instance=ExtResource( 2 )]
min_wait_time = 2.0
max_wait_time = 16.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="LeftCometSpawnPoint/Spawner"]
autoplay = "idle"
anims/idle = SubResource( 4 )

[node name="RightStarSpawnPoint" type="Node2D" parent="."]
position = Vector2( 1536, 0 )

[node name="Spawner" parent="RightStarSpawnPoint" instance=ExtResource( 5 )]
position = Vector2( 0, 128 )
spawn_scene = ExtResource( 6 )

[node name="RandomTimer" parent="RightStarSpawnPoint/Spawner" instance=ExtResource( 2 )]
min_wait_time = 2.0
max_wait_time = 16.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="RightStarSpawnPoint/Spawner"]
autoplay = "idle"
anims/idle = SubResource( 5 )

[node name="RighCometSpawnPoint" type="Node2D" parent="."]
position = Vector2( 1536, 0 )

[node name="Spawner" parent="RighCometSpawnPoint" instance=ExtResource( 5 )]
position = Vector2( 0, 128 )
spawn_scene = ExtResource( 12 )

[node name="RandomTimer" parent="RighCometSpawnPoint/Spawner" instance=ExtResource( 2 )]
min_wait_time = 2.0
max_wait_time = 16.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="RighCometSpawnPoint/Spawner"]
autoplay = "idle"
anims/idle = SubResource( 6 )

[node name="CheeseSpawner" parent="." instance=ExtResource( 3 )]
min_cheeses = 5
max_cheeses = 10
spread = 180.0
min_radius = 16.0
max_radius = 64.0

[node name="Astromouse" parent="." instance=ExtResource( 15 )]
position = Vector2( 640, 296 )

[node name="StarmouseSpawner" parent="." instance=ExtResource( 5 )]
spawn_scene = ExtResource( 10 )

[node name="SupernovaSpawner" parent="." instance=ExtResource( 5 )]
spawn_scene = ExtResource( 11 )

[node name="Tutorial" type="Node2D" parent="."]
pause_mode = 2
script = ExtResource( 1 )
astromouse_path = NodePath("../Astromouse")
moon_path = NodePath("../Moon")

[node name="StarArea2D" type="Area2D" parent="Tutorial"]
position = Vector2( 912, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial/StarArea2D"]
shape = SubResource( 7 )

[node name="CometArea2D" type="Area2D" parent="Tutorial"]
position = Vector2( 384, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial/CometArea2D"]
shape = SubResource( 7 )

[node name="BlackBarTop" type="Polygon2D" parent="Tutorial"]
position = Vector2( 0, -64 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 0, 0, 0, 64, 1280, 64, 1280, 0 )

[node name="BlackBarDown" type="Polygon2D" parent="Tutorial"]
position = Vector2( 0, 720 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 0, 0, 0, 64, 1280, 64, 1280, 0 )

[node name="Overlay" type="Polygon2D" parent="Tutorial"]
position = Vector2( 0, 656 )
color = Color( 0, 0, 0, 0 )
polygon = PoolVector2Array( 0, -656, 0, 64, 1280, 64, 1280, -656 )

[node name="Comet" parent="Tutorial" instance=ExtResource( 12 )]
pause_mode = 1
position = Vector2( -184, 240 )

[node name="Star" parent="Tutorial" instance=ExtResource( 6 )]
pause_mode = 1
position = Vector2( 1928, 144 )
rotation = 3.14159

[node name="GodHandRight" type="Node2D" parent="Tutorial"]
position = Vector2( 1088, 832 )

[node name="Sprite" type="Sprite" parent="Tutorial/GodHandRight"]
position = Vector2( 56, 216 )
texture = ExtResource( 7 )
centered = false
offset = Vector2( -104, -216 )
region_enabled = true
region_rect = Rect2( 6, 6, 182, 207 )

[node name="GodHandLeft" type="Node2D" parent="Tutorial"]
position = Vector2( 192, 832 )

[node name="Sprite" type="Sprite" parent="Tutorial/GodHandLeft"]
position = Vector2( -24, 216 )
texture = ExtResource( 7 )
centered = false
offset = Vector2( -104, -216 )
flip_h = true
region_enabled = true
region_rect = Rect2( 6, 6, 182, 207 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tutorial"]
autoplay = "SETUP"
anims/Comet = SubResource( 8 )
anims/Finished = SubResource( 9 )
anims/Overlay = SubResource( 10 )
anims/SETUP = SubResource( 11 )
anims/Star = SubResource( 12 )

[node name="Tween" type="Tween" parent="Tutorial"]

[node name="TutorialAchievement" parent="Tutorial" instance=ExtResource( 16 )]

[node name="CometCollisionTimer" type="Timer" parent="."]

[node name="ShakingCamera2D" parent="." instance=ExtResource( 17 )]
strength = 5.0

[node name="FinishTimer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true
autostart = true

[node name="Star" parent="." instance=ExtResource( 6 )]
position = Vector2( 1352, 136 )
direction = Vector2( -1, 0 )

[node name="Comet" parent="." instance=ExtResource( 12 )]
position = Vector2( -64, 520 )
[connection signal="input_event" from="JumpArea2D" to="." method="_on_JumpArea2D_input_event"]
[connection signal="spawned" from="BlackholeSpawner" to="." method="_on_BlackholeSpawner_spawned"]
[connection signal="timeout" from="BlackholeSpawner/RandomTimer" to="BlackholeSpawner" method="spawn"]
[connection signal="spawned" from="LeftStarSpawnPoint/Spawner" to="." method="_on_LeftStarSpawner_spawned"]
[connection signal="timeout" from="LeftStarSpawnPoint/Spawner/RandomTimer" to="LeftStarSpawnPoint/Spawner" method="spawn"]
[connection signal="spawned" from="LeftCometSpawnPoint/Spawner" to="." method="_on_LeftCometSpawner_spawned"]
[connection signal="timeout" from="LeftCometSpawnPoint/Spawner/RandomTimer" to="LeftCometSpawnPoint/Spawner" method="spawn"]
[connection signal="spawned" from="RightStarSpawnPoint/Spawner" to="." method="_on_RightStarSpawner_spawned"]
[connection signal="timeout" from="RightStarSpawnPoint/Spawner/RandomTimer" to="RightStarSpawnPoint/Spawner" method="spawn"]
[connection signal="spawned" from="RighCometSpawnPoint/Spawner" to="." method="_on_RightCometSpawner_spawned"]
[connection signal="timeout" from="RighCometSpawnPoint/Spawner/RandomTimer" to="RighCometSpawnPoint/Spawner" method="spawn"]
[connection signal="spawned" from="StarmouseSpawner" to="." method="_on_StarmouseSpawner_spawned"]
[connection signal="body_entered" from="Tutorial/StarArea2D" to="Tutorial" method="_on_StarArea2D_body_entered"]
[connection signal="body_entered" from="Tutorial/CometArea2D" to="Tutorial" method="_on_CometArea2D_body_entered"]
[connection signal="collided" from="Tutorial/Comet" to="." method="_on_Comet_collided"]
[connection signal="collided" from="Tutorial/Star" to="." method="_on_Star_collided"]
[connection signal="timeout" from="FinishTimer" to="." method="_on_FinishTimer_timeout"]
[connection signal="collided" from="Star" to="." method="_on_Star_collided"]
[connection signal="collided" from="Comet" to="." method="_on_Comet_collided"]
